# dpasca-pytorch-examples

./: .gitignore  CMakeLists.txt  DrawChart.h  README.md  build.sh  example1.cpp  example2.cpp  example5.cpp  get_binance_candles.ipynb  lstm_btc.ipynb  lstm_sinewave.ipynb  trans_btc.ipynb  trans_btc.py  trans_btc_classes.ipynb  trans_btc_classes.py  trans_btc_nobatch.ipynb  trans_btc_nobatch.py  trans_sinewave.ipynb  trans_sinewave.py
cpp/: CMakeLists.txt  example3.cpp  example5.cpp
market_data_cache/: btc_usdt_1h_binance_data_2020-01-01_2022-12-31.pickle  btc_usdt_1h_binance_data_2023-01-01_2023-07-23.pickle  btc_usdt_6h_binance_data_2017-01-01_2022-12-31.pickle  btc_usdt_6h_binance_data_2018-01-01_2021-12-31.pickle  btc_usdt_6h_binance_data_2020-01-01_2021-12-31.pickle  btc_usdt_6h_binance_data_2022-01-01_2023-07-23.pickle  btc_usdt_6h_binance_data_2023-01-01_2023-07-23.pickle
